# synthyverse

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  NOTICE  README.md  THIRD_PARTY_NOTICES.md  main.py  main.sh  main.slurm  print_results.py  project.toml  pyproject.toml  result.json  setup.py  tutorial.ipynb
.github/workflows/: publish.yml  update_templates.yml
LICENSES/: CTGAN-BSL-1.1.txt  MIT.txt
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/tmp/: cat_feature_index.27171bc-560c5942-7ffdfb92-9cd6024a.tmp
configs/: data_configs.json  metric_configs.json  model_configs.json
docs/source/: conf.py  getting_started.md  in_depth_usage.md  index.rst  licensing.md
requirements/dev/: docs.txt
requirements/evaluation/: eval.txt
requirements/generators/: arf.txt  bn.txt  cdtd.txt  ctabgan.txt  ctgan.txt  forestdiffusion.txt  forestlm.txt  nrgboost.txt  realtabformer.txt  synthpop.txt  tabargn.txt  tabddpm.txt  tabsyn.txt  unmaskingtrees.txt  xgenboost.txt
requirements/imputers/: missforest.txt  ot.txt
requirements/preprocessing/: preproc.txt
scripts/: __init__.py  setup_utils.py  update_templates.py
synthyverse/: TEMPLATES.md
synthyverse/benchmark/: __init__.py  benchmark.py  imputation.py  synthesis.py  utils.py
synthyverse/evaluation/: METRICS.md  __init__.py  eval.py  fidelity.py  gower.py  hyperparameters.py  ml.py  preprocessing.py  privacy.py  utility.py  utils.py
synthyverse/generators/: GENERATORS.md  __init__.py  _optional.py  base.py  dgm_utils.py  persistence.py
synthyverse/imputers/: __init__.py  base.py
synthyverse/leaderboard/: __init__.py  leaderboard.py  load_data.py  main.py
synthyverse/preprocessing/: __init__.py  clean.py  preprocessing.py  qualityCheck.py  tabular.py
synthyverse/utils/: __init__.py  missingness.py  (+5 more)
(+152 files in other folders)
