[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synthyverse"
version = "0.2.3"
description = "Synthetic data generation and evaluation library"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT License"}
authors = [
    {name = "Jim Achterberg"},
    {name = "Saif Ul Islam"},
    {name = "Zia Ur Rehman"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "tqdm",
    "scipy",
    "xgboost",
    "optuna",
    "seaborn",
    "numba",
    "psutil",
    "torch",
    "torch-ema",
    "einops",
    "imbalanced-learn",
]

[tool.setuptools]
include-package-data = true
license-files = [
    "LICENSE",
    "NOTICE",
    "THIRD_PARTY_NOTICES.md",
    "LICENSES/*",
]

[project.urls]
Homepage = "https://github.com/synthyverse/synthyverse"
Documentation = "https://synthyverse.readthedocs.io"

[project.optional-dependencies]
ctgan = [
    "ctgan",
]
docs = [
    "sphinx",
    "furo",
    "myst-parser",
    "sphinx-copybutton",
    "sphinx-autodoc-typehints",
    "sphinxcontrib-mermaid",
    "linkify-it-py",
]

[tool.setuptools.packages.find]
include = ["synthyverse*"]
